# susi-core

./: .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  build.sh  main.cpp
include/susi/: FramingServer.h  SSLTCPServer.h  SusiServer.h  TCPServer.h
sources/: SSLTCPServer.cpp  SusiServer.cpp  TCPServer.cpp
